--- a/unknown_mwv1a9.paypal.json
+++ b/unknown_mwv1a9.paypal.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_mwv1a9.paypal",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_mwv1a9.paypal",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570599500223,
+	"last_scraped": 1570672684715,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569170462227,
-	"edit": 12,
-	"next_scrape": 1570644722905,
+	"updt": 1570602581263,
+	"edit": 13,
+	"next_scrape": 1570713051068,
 	"category": "clicker",
-	"last_update": 1570599500223,
+	"last_update": 1570672684715,
 	"output": [
 		{
 			"args": {},
-			"calls": 80242,
+			"calls": 96465,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stmas.",
@@ -51,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 102347,
+			"calls": 106003,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stmas.",
@@ -81,7 +81,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 11309,
+			"calls": 11982,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"stmas.",
