--- a/unknown_yxz1xb.respects.json
+++ b/unknown_yxz1xb.respects.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yxz1xb.respects",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yxz1xb.respects",
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1560147053239,
-	"last_scraped": 1570600571644,
+	"last_scraped": 1570673216468,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,25 +25,28 @@
 			}
 		]
 	],
-	"updt": 1570601454412,
-	"edit": 10,
-	"next_scrape": 1570640843262,
+	"updt": 1570603935181,
+	"edit": 11,
+	"next_scrape": 1570756957513,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1570600571644,
+	"last_update": 1570673216468,
 	"output": [
 		{
 			"args": {
 				"channel": "0000"
 			},
-			"calls": 796,
+			"calls": 967,
 			"base": "`DFailure`\nJoin 0000.",
 			"fragments": [
 				"re out",
 				"ore: Y",
 				"hours. ",
-				"e: You'",
 				"E4B of ",
 				"1E4B of",
+				"ae: You' rem",
+				"I¦ our hearts, we reh",
+				"In our heaªts, we r©h",
+				"In our hearts, we1E4B",
 				"In our hearts, we rem"
 			],
 			"hits": [
