--- a/uknown_dq1wmp.loc.json
+++ b/uknown_dq1wmp.loc.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_dq1wmp.loc",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dq1wmp.loc",
 	"sector": "NGC_4554",
 	"sec_level": 4,
 	"date_added": 1562869021945,
-	"last_scraped": 1570603412144,
+	"last_scraped": 1570673650548,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562869021945
 		}
 	],
-	"next_scrape": 1570647177944,
+	"next_scrape": 1570713522348,
 	"category": "clicker",
-	"last_update": 1570603412144,
+	"last_update": 1570673650548,
 	"output": [
 		{
 			"args": {},
-			"calls": 331944,
+			"calls": 339057,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"S | b",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 380438,
+			"calls": 390428,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"S | b",
@@ -89,7 +89,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 49203,
+			"calls": 49572,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"S | b",
@@ -136,6 +136,6 @@
 			]
 		}
 	],
-	"updt": 1568697028810,
-	"edit": 36
+	"updt": 1570603708726,
+	"edit": 37
 }
