--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1570605515959,
-	"edit": 326,
+	"updt": 1570675178358,
+	"edit": 327,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 	"next_scrape": 1570715751945,
 	"scrape_ct": 17,
@@ -51,10 +51,16 @@
 				{
 					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 					"frags": [
+						" and ",
+						"st acc",
 						"nd 'la",
-						"mask '",
+						"k 'las",
 						"on' tim",
+						"last ac",
 						"ction' ",
+						"ccess' ",
+						" mask '",
+						" access",
 						"mestamps",
 						"ast acti"
 					]
@@ -66,10 +72,16 @@
 		{
 			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
 			"frags": [
+				" and ",
+				"st acc",
 				"nd 'la",
-				"mask '",
+				"k 'las",
 				"on' tim",
+				"last ac",
 				"ction' ",
+				"ccess' ",
+				" mask '",
+				" access",
 				"mestamps",
 				"ast acti"
 			]
