--- a/uknown_0p8tk1.x.json
+++ b/uknown_0p8tk1.x.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_0p8tk1.x",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_0p8tk1.x",
 	"sector": "NGC_4040",
 	"sec_level": 4,
@@ -904,13 +904,10 @@
 			]
 		}
 	],
-	"updt": 1568686417352,
-	"edit": 6,
+	"updt": 1570601454412,
+	"edit": 7,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
