--- a/uknown_1ryirp.stitute.json
+++ b/uknown_1ryirp.stitute.json
@@ -1,24 +1,24 @@
 {
 	"_id": "uknown_1ryirp.stitute",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_1ryirp.stitute",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570598171621,
+	"last_scraped": 1570678320590,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569154216763,
-	"edit": 3,
+	"updt": 1570602581263,
+	"edit": 4,
 	"scrape_ct": 18,
-	"next_scrape": 1570678239695,
+	"next_scrape": 1570762378141,
 	"category": "risk_factor",
-	"last_update": 1569091486327,
+	"last_update": 1570678320590,
 	"output": [
 		{
 			"args": {},
@@ -37,7 +37,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 126,
+			"calls": 235,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"s >. B",
@@ -51,9 +51,6 @@
 	],
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
