--- a/uknown_jau9wq.sha256.json
+++ b/uknown_jau9wq.sha256.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_jau9wq.sha256",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_jau9wq.sha256",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566873426209,
-	"last_scraped": 1570594875446,
+	"last_scraped": 1570678221988,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 19,
-	"next_scrape": 1570679107179,
+	"next_scrape": 1570770676161,
 	"category": "risk_factor",
-	"last_update": 1568686001903,
+	"last_update": 1570678221988,
 	"output": [
 		{
 			"args": {},
@@ -37,27 +37,30 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 204,
+			"calls": 337,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
-				"be th",
 				"onside",
+				"n AI t",
+				"at sub",
+				"t submi",
 				"t 'surv",
-				"e AI th",
+				"o be th",
+				"bmitted",
 				" the pr",
+				"the proc",
+				"same AI ",
 				"s' the p",
 				"itted to",
-				"e proces"
+				"e proces",
+				"e AI tha"
 			]
 		}
 	],
-	"updt": 1568686193659,
-	"edit": 4,
+	"updt": 1570601454412,
+	"edit": 5,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
