--- a/uknown_oon5ym.q.json
+++ b/uknown_oon5ym.q.json
@@ -1,24 +1,24 @@
 {
 	"_id": "uknown_oon5ym.q",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_oon5ym.q",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570597738481,
+	"last_scraped": 1570678370821,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569088588042,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 20,
-	"next_scrape": 1570684231148,
+	"next_scrape": 1570768952960,
 	"category": "risk_factor",
-	"last_update": 1570597727887,
+	"last_update": 1570678370821,
 	"output": [
 		{
 			"args": {},
@@ -39,7 +39,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 180,
+			"calls": 312,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"f catc",
@@ -687,9 +687,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
