--- a/unknown_2ujovf.e.json
+++ b/unknown_2ujovf.e.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_2ujovf.e",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_2ujovf.e",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570598191514,
+	"last_scraped": 1570678572634,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569092648772,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 18,
-	"next_scrape": 1570679869536,
+	"next_scrape": 1570760030504,
 	"category": "risk_factor",
-	"last_update": 1569092491768,
+	"last_update": 1570678572634,
 	"output": [
 		{
 			"args": {},
@@ -40,7 +40,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 124,
+			"calls": 243,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				" impl",
@@ -264,9 +264,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
