--- a/unknown_egmh9p.atria_delta.json
+++ b/unknown_egmh9p.atria_delta.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_egmh9p.atria_delta",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_egmh9p.atria_delta",
 	"sector": "NGC_1069",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570597799950,
+	"last_scraped": 1570678413020,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569089038796,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 20,
-	"next_scrape": 1570681432166,
+	"next_scrape": 1570766887145,
 	"category": "risk_factor",
-	"last_update": 1569088945634,
+	"last_update": 1570678413020,
 	"output": [
 		{
 			"args": {},
@@ -39,7 +39,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 162,
+			"calls": 283,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"stem ",
@@ -54,9 +54,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
