--- a/unknown_eshkz0.manage.json
+++ b/unknown_eshkz0.manage.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_eshkz0.manage",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_eshkz0.manage",
 	"sector": "NGC_7982",
 	"sec_level": 4,
 	"date_added": 1563453682871,
-	"last_scraped": 1570594824278,
+	"last_scraped": 1570678180976,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1570687385744,
+	"next_scrape": 1570759150643,
 	"category": "risk_factor",
-	"last_update": 1568681909866,
+	"last_update": 1570678180976,
 	"output": [
 		{
 			"args": {},
@@ -35,12 +35,17 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 222,
+			"calls": 362,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
-				"uch p",
+				"etty ",
+				"sonall",
+				"ably t",
 				" too m",
 				" i am ",
+				"nd i am",
+				"ch pers",
+				" much p",
 				"nfospace",
 				"ke a lot",
 				"ce theor"
@@ -333,13 +338,10 @@
 			]
 		}
 	],
-	"updt": 1568686417352,
-	"edit": 6,
+	"updt": 1570601454412,
+	"edit": 7,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
