--- a/unknown_nd836z.bot_brain.json
+++ b/unknown_nd836z.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_nd836z.bot_brain",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "unknown_nd836z.bot_brain",
 	"sector": "K_0542",
 	"sec_level": 4,
@@ -13,8 +13,8 @@
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569089941678,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 18,
 	"next_scrape": 1570690509689,
 	"category": "risk_factor",
@@ -463,9 +463,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
