--- a/unknown_w7dc99.pixels.json
+++ b/unknown_w7dc99.pixels.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_w7dc99.pixels",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "unknown_w7dc99.pixels",
 	"sector": "NGC_5711",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570597999633,
+	"last_scraped": 1570678521386,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569090619892,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 20,
-	"next_scrape": 1570687166957,
+	"next_scrape": 1570761775628,
 	"category": "risk_factor",
-	"last_update": 1570597982247,
+	"last_update": 1570678521386,
 	"output": [
 		{
 			"args": {},
@@ -569,12 +569,25 @@
 				"ance to N 1K469GC with do:\"win\"\n\nOR\n\nYOU COULD `VL",
 				"'s take N§103GC Ãith do:\"win\"\n\nOR\n\nYOU COULD `VLOS"
 			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 130,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"e cha",
+				"it the",
+				"e it. ",
+				" the g",
+				" to hit",
+				"ance to ",
+				"'s take "
+			]
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
