--- a/uknown_9n202t.reveal_text.json
+++ b/uknown_9n202t.reveal_text.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_9n202t.reveal_text",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_9n202t.reveal_text",
 	"sector": "K_4785",
 	"sec_level": 4,
@@ -660,13 +660,10 @@
 			]
 		}
 	],
-	"updt": 1568708305009,
-	"edit": 8,
+	"updt": 1570602128402,
+	"edit": 9,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
