--- a/uknown_qhwj7h.multi_t2.json
+++ b/uknown_qhwj7h.multi_t2.json
@@ -1,24 +1,24 @@
 {
 	"_id": "uknown_qhwj7h.multi_t2",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_qhwj7h.multi_t2",
 	"sector": "HJG_4380",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570598262192,
+	"last_scraped": 1570678623364,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569094900752,
-	"edit": 2,
+	"updt": 1570602581263,
+	"edit": 3,
 	"scrape_ct": 17,
-	"next_scrape": 1570680970942,
+	"next_scrape": 1570767335600,
 	"category": "risk_factor",
-	"last_update": 1569094781702,
+	"last_update": 1570678623364,
 	"output": [
 		{
 			"args": {},
@@ -38,7 +38,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 271,
+			"calls": 405,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"86 Yo",
@@ -433,9 +433,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
