--- a/uknown_zp22ux.interesting_channels.json
+++ b/uknown_zp22ux.interesting_channels.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_zp22ux.interesting_channels",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "uknown_zp22ux.interesting_channels",
 	"sector": "NGC_1810",
 	"sec_level": 4,
@@ -2255,8 +2255,8 @@
 			]
 		}
 	],
-	"updt": 1570601454412,
-	"edit": 6,
+	"updt": 1570603935181,
+	"edit": 7,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"identified": [
 		{
@@ -3366,9 +3366,6 @@
 		}
 	],
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
