--- a/unknown_tnh771.reload.json
+++ b/unknown_tnh771.reload.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_tnh771.reload",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_tnh771.reload",
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570661787701,
+	"last_scraped": 1570681661748,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570602353583,
-	"edit": 3,
+	"updt": 1570661873353,
+	"edit": 4,
 	"scrape_ct": 19,
-	"next_scrape": 1570704684316,
+	"next_scrape": 1570725949434,
 	"category": "fishie_tank",
-	"last_update": 1570661787701,
+	"last_update": 1570681699197,
 	"output": [
 		{
 			"args": {},
-			"calls": 13261,
+			"calls": 20444,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" to b",
@@ -50,7 +50,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 1979,
+			"calls": 3692,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -119,6 +119,11 @@
 				" that su",
 				" AI that"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
