--- a/unknown_qjibis.xfer.json
+++ b/unknown_qjibis.xfer.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_qjibis.xfer",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_qjibis.xfer",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570663648561,
+	"last_scraped": 1570682594402,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569119031713,
-	"edit": 6,
-	"next_scrape": 1570703672969,
+	"updt": 1570663907457,
+	"edit": 7,
+	"next_scrape": 1570728363928,
 	"category": "clicker",
-	"last_update": 1570663648561,
+	"last_update": 1570682594402,
 	"output": [
 		{
 			"args": {},
-			"calls": 40575,
+			"calls": 47306,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"lack ",
@@ -60,7 +60,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 50868,
+			"calls": 59479,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"lack ",
@@ -154,6 +154,11 @@
 			"frags": [
 				"ed ass"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
