--- a/uknown_kicz6i.k3y_cull.json
+++ b/uknown_kicz6i.k3y_cull.json
@@ -43,8 +43,13 @@
 				{
 					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 					"frags": [
+						"s' mi",
+						"l lik",
 						"el li",
+						"ases.",
 						"Or ph",
+						"ry - t",
+						"ogies'",
 						". Or p",
 						" sure ",
 						"ogy. So",
@@ -52,7 +57,8 @@
 						"rgraduat",
 						"e an und",
 						"analogy.",
-						"Honestly"
+						"Honestly",
+						" be the "
 					]
 				}
 			]
@@ -62,8 +68,13 @@
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
 			"frags": [
+				"s' mi",
+				"l lik",
 				"el li",
+				"ases.",
 				"Or ph",
+				"ry - t",
+				"ogies'",
 				". Or p",
 				" sure ",
 				"ogy. So",
@@ -71,10 +82,11 @@
 				"rgraduat",
 				"e an und",
 				"analogy.",
-				"Honestly"
+				"Honestly",
+				" be the "
 			]
 		}
 	],
-	"updt": 1570659845329,
-	"edit": 290
+	"updt": 1570679459075,
+	"edit": 291
 }
