--- a/uknown_2q8bmy.decorruptor.json
+++ b/uknown_2q8bmy.decorruptor.json
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1570605741501,
-	"edit": 222,
+	"updt": 1570675627456,
+	"edit": 223,
 	"pl_output": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
 	"next_scrape": 1570721038817,
 	"scrape_ct": 14,
@@ -51,11 +51,15 @@
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
 						"in fr",
-						"045 i",
 						"anged t",
 						"y\\n2086 ",
+						"s, Mallo",
+						"ront of ",
+						"ory\\n208",
+						"arranged",
 						"Yes, Mal",
 						"\\n2085 Ye",
+						"\\n2045 in",
 						" them\\n20"
 					]
 				}
@@ -67,11 +71,15 @@
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 			"frags": [
 				"in fr",
-				"045 i",
 				"anged t",
 				"y\\n2086 ",
+				"s, Mallo",
+				"ront of ",
+				"ory\\n208",
+				"arranged",
 				"Yes, Mal",
 				"\\n2085 Ye",
+				"\\n2045 in",
 				" them\\n20"
 			]
 		}
