--- a/uknown_71chos.breach.json
+++ b/uknown_71chos.breach.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_71chos.breach",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_71chos.breach",
 	"sector": "NGC_6016",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570666533186,
+	"last_scraped": 1570685507203,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569218270683,
-	"edit": 29,
-	"next_scrape": 1570712754703,
+	"updt": 1570666610715,
+	"edit": 30,
+	"next_scrape": 1570726180138,
 	"category": "fishie_tank",
-	"last_update": 1570666533186,
+	"last_update": 1570685507203,
 	"output": [
 		{
 			"args": {},
-			"calls": 197457,
+			"calls": 212237,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"4B of",
@@ -125,6 +125,14 @@
 				"You're h",
 				"ere out\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "feed"
+		},
+		{
+			"do": "clean"
 		}
 	]
 }
