--- a/uknown_ewk6vx.mgb.json
+++ b/uknown_ewk6vx.mgb.json
@@ -6,7 +6,7 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569227339442,
-	"last_scraped": 1570666572663,
+	"last_scraped": 1570685568001,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 1,
-	"next_scrape": 1570709511427,
+	"next_scrape": 1570729549164,
 	"category": "clicker",
-	"last_update": 1570666572663,
+	"last_update": 1570685568001,
 	"output": [
 		{
 			"args": {},
-			"calls": 46094,
+			"calls": 60600,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"\\n1E29",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 43043,
+			"calls": 50914,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"\\n1E29",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7488,
+			"calls": 8155,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"\\n1E29",
@@ -111,6 +111,38 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 1000,
+			"base": "`LCLICK  ECURED`",
+			"fragments": [
+				"e. LikS",
+				"\\n1E29S",
+				"Se. Lik",
+				"S\\n1E29",
+				"S29 Of ",
+				"S it. B",
+				"29 Of S",
+				"it. BK S",
+				"eyhole.S",
+				"e. LikeS",
+				"e. Lik S",
+				"e it. BS",
+				"\\n1E29 S",
+				"29 Of  S",
+				"urse I hS",
+				"rs.\\n1E2S",
+				"hate it.S",
+				"eyhole. S",
+				"e. Like S",
+				"e. LikK S",
+				"e it. B S",
+				"\\n1E29K S",
+				"29 Of K S"
+			]
 		}
 	],
 	"identified": [
@@ -128,6 +160,6 @@
 			]
 		}
 	],
-	"updt": 1569227967659,
-	"edit": 3
+	"updt": 1570685545694,
+	"edit": 5
 }
