--- a/unknown_srj679.public.json
+++ b/unknown_srj679.public.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_srj679.public",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "could not json",
 	"script": "unknown_srj679.public",
 	"sector": "K_8332",
 	"sec_level": 2,
@@ -15,6 +15,6 @@
 	],
 	"pl_output": "Please specify a command with see:\"<command name>\"->\"-- access directory with see:\"personnel\"",
 	"next_scrape": 1570760088777,
-	"updt": 1570251698019,
-	"edit": 22
+	"updt": 1570668191444,
+	"edit": 23
 }
