--- a/uknown_i5argo.top.json
+++ b/uknown_i5argo.top.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_i5argo.top",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_i5argo.top",
 	"sector": "SPC_4267",
 	"sec_level": 4,
 	"date_added": 1565386388303,
-	"last_scraped": 1570670282942,
+	"last_scraped": 1570688591930,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570710869617,
+	"next_scrape": 1570730044020,
 	"category": "fishie_tank",
-	"last_update": 1570670282942,
+	"last_update": 1570688591930,
 	"output": [
 		{
 			"args": {},
-			"calls": 119905,
+			"calls": 133779,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"that '",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 8778,
+			"calls": 9672,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -91,7 +91,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 108943,
+			"calls": 115109,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"that '",
@@ -121,8 +121,8 @@
 			]
 		}
 	],
-	"updt": 1570602128402,
-	"edit": 16,
+	"updt": 1570670442967,
+	"edit": 17,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
