--- a/unknown_da6i0q.still_alive.json
+++ b/unknown_da6i0q.still_alive.json
@@ -6,23 +6,23 @@
 	"sector": "NGC_1025",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570671901119,
+	"last_scraped": 1570689597952,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570602581263,
-	"edit": 5,
+	"updt": 1570672021205,
+	"edit": 6,
 	"scrape_ct": 11,
-	"next_scrape": 1570713690131,
+	"next_scrape": 1570729982571,
 	"category": "clicker",
-	"last_update": 1570671901119,
+	"last_update": 1570689597952,
 	"output": [
 		{
 			"args": {},
-			"calls": 33450,
+			"calls": 41698,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"receiv",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 27743,
+			"calls": 35403,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"receiv",
@@ -107,6 +107,11 @@
 				"36 Is th",
 				"2A I am "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
