--- a/unknown_k75d7f.hack_me.json
+++ b/unknown_k75d7f.hack_me.json
@@ -6,7 +6,7 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569213624453,
-	"last_scraped": 1570672854812,
+	"last_scraped": 1570690500281,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,7 +14,7 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570717531844,
+	"next_scrape": 1570737270604,
 	"category": "clicker",
 	"last_update": 1570672854812,
 	"output": [
@@ -128,6 +128,14 @@
 			]
 		}
 	],
-	"updt": 1570602807108,
-	"edit": 3
+	"updt": 1570672922026,
+	"edit": 4,
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
+		}
+	]
 }
