--- a/unknown_zpits8.bot_scam_do_not_run.json
+++ b/unknown_zpits8.bot_scam_do_not_run.json
@@ -1,28 +1,28 @@
 {
 	"_id": "unknown_zpits8.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_zpits8.bot_scam_do_not_run",
 	"sector": "SPC_2784",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570672162882,
+	"last_scraped": 1570689898597,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570602581263,
-	"edit": 7,
+	"updt": 1570672244976,
+	"edit": 8,
 	"scrape_ct": 7,
-	"next_scrape": 1570712469590,
+	"next_scrape": 1570730862174,
 	"category": "fishie_tank",
-	"last_update": 1570672162882,
+	"last_update": 1570689898597,
 	"output": [
 		{
 			"args": {},
-			"calls": 53268,
+			"calls": 69569,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"ms of",
@@ -63,7 +63,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4695,
+			"calls": 5216,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -109,7 +109,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 31488,
+			"calls": 34144,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"ms of",
