--- a/uknown_vs802j.t1.json
+++ b/uknown_vs802j.t1.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_vs802j.t1",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_vs802j.t1",
 	"sector": "VNP_9534",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570672422932,
+	"last_scraped": 1570690087909,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570602581263,
-	"edit": 11,
-	"next_scrape": 1570719036803,
+	"updt": 1570672470397,
+	"edit": 12,
+	"next_scrape": 1570735109729,
 	"category": "fishie_tank",
-	"last_update": 1570672422932,
+	"last_update": 1570690119689,
 	"output": [
 		{
 			"args": {},
-			"calls": 89776,
+			"calls": 99929,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"eel a",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 8615,
+			"calls": 9302,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -132,6 +132,11 @@
 				"l thing ",
 				"e old en"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
