--- a/unknown_k75d7f.hack_me.json
+++ b/unknown_k75d7f.hack_me.json
@@ -6,7 +6,7 @@
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569213624453,
-	"last_scraped": 1570690500281,
+	"last_scraped": 1570690519911,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570737270604,
+	"next_scrape": 1570733664652,
 	"category": "clicker",
-	"last_update": 1570672854812,
+	"last_update": 1570690519911,
 	"output": [
 		{
 			"args": {},
-			"calls": 18051,
+			"calls": 24965,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ou se",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 19949,
+			"calls": 24772,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ou se",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 3409,
+			"calls": 4200,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ou se",
@@ -129,13 +129,5 @@
 		}
 	],
 	"updt": 1570672922026,
-	"edit": 4,
-	"retry_args": [
-		{
-			"click": true
-		},
-		{
-			"CLICK": true
-		}
-	]
+	"edit": 4
 }
