--- a/abndnd_nxivu9.lz.json
+++ b/abndnd_nxivu9.lz.json
@@ -1,12 +1,12 @@
 {
 	"_id": "abndnd_nxivu9.lz",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abndnd_nxivu9.lz",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566192488933,
-	"last_scraped": 1570674171281,
+	"last_scraped": 1570691594606,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1570715932864,
+	"next_scrape": 1570734383179,
 	"category": "clicker",
-	"last_update": 1570674171281,
+	"last_update": 1570691594606,
 	"output": [
 		{
 			"args": {},
-			"calls": 75725,
+			"calls": 83466,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"r maki",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 110127,
+			"calls": 126530,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"r maki",
@@ -152,8 +152,8 @@
 			]
 		}
 	],
-	"updt": 1570604387260,
-	"edit": 14,
+	"updt": 1570674502013,
+	"edit": 15,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
@@ -168,6 +168,11 @@
 				" you for",
 				" intro |"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
