--- a/unknown_857ztx.log.json
+++ b/unknown_857ztx.log.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_857ztx.log",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_857ztx.log",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565855292286,
-	"last_scraped": 1570680281785,
+	"last_scraped": 1570694851697,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1570723764653,
+	"next_scrape": 1570783159549,
 	"category": "plant_sim",
-	"last_update": 1570680281785,
+	"last_update": 1570694851697,
 	"output": [
 		{
 			"args": {},
@@ -132,7 +132,7 @@
 		},
 		{
 			"args": {},
-			"calls": 1707,
+			"calls": 2720,
 			"base": "c:\"yt4lgn\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã Ã\n                ÃÃ\n                ",
 			"fragments": [
 				"i smi",
@@ -160,6 +160,6 @@
 			]
 		}
 	],
-	"updt": 1570660522581,
-	"edit": 180
+	"updt": 1570680362275,
+	"edit": 181
 }
