--- a/uknown_k3hkgg.translate.json
+++ b/uknown_k3hkgg.translate.json
@@ -6,22 +6,22 @@
 	"sector": "HJG_8307",
 	"sec_level": 4,
 	"date_added": 1562336992224,
-	"last_scraped": 1570688048773,
+	"last_scraped": 1570701103437,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562336992224
 		}
 	],
-	"updt": 1570688024960,
-	"edit": 7,
-	"next_scrape": 1570732040854,
+	"updt": 1570700427976,
+	"edit": 9,
+	"next_scrape": 1570741940848,
 	"category": "clicker",
-	"last_update": 1570688048773,
+	"last_update": 1570701093099,
 	"output": [
 		{
 			"args": {},
-			"calls": 37791,
+			"calls": 42248,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"stion",
@@ -42,11 +42,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"stion",
 						"estio",
+						"\\n1E43",
 						"not. I ",
-						"I suppo",
+						"e not. ",
+						"\\n1E45 ",
 						" a ques",
-						"ot. I ha"
+						"ppose no",
+						"ot. I ha",
+						"on, Mall",
+						"ne?\\n1E4",
+						"a questi",
+						"I suppos"
 					]
 				}
 			]
@@ -55,7 +63,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 34862,
+			"calls": 42106,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"stion",
@@ -76,11 +84,19 @@
 				{
 					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
 					"frags": [
+						"stion",
 						"estio",
+						"\\n1E43",
 						"not. I ",
-						"I suppo",
+						"e not. ",
+						"\\n1E45 ",
 						" a ques",
-						"ot. I ha"
+						"ppose no",
+						"ot. I ha",
+						"on, Mall",
+						"ne?\\n1E4",
+						"a questi",
+						"I suppos"
 					]
 				}
 			]
