--- a/uknown_2nb382.t_v2_mng.json
+++ b/uknown_2nb382.t_v2_mng.json
@@ -6,17 +6,17 @@
 	"sector": "VNP_9171",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570689575779,
+	"last_scraped": 1570702228459,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570672021205,
-	"edit": 5,
+	"updt": 1570689603794,
+	"edit": 6,
 	"scrape_ct": 17,
-	"next_scrape": 1570731465723,
+	"next_scrape": 1570748353429,
 	"category": "fishie_tank",
 	"last_update": 1570689575779,
 	"output": [
@@ -228,6 +228,14 @@
 			"frags": [
 				"vironme"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "feed"
+		},
+		{
+			"do": "clean"
 		}
 	]
 }
