--- a/uknown_4wh9we.scam.json
+++ b/uknown_4wh9we.scam.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_6485",
 	"sec_level": 4,
 	"date_added": 1569297916960,
-	"last_scraped": 1570690650917,
+	"last_scraped": 1570703132649,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1570732977232,
+	"next_scrape": 1570749313549,
 	"category": "clicker",
-	"last_update": 1570690650917,
+	"last_update": 1570703102933,
 	"output": [
 		{
 			"args": {},
-			"calls": 63030,
+			"calls": 70501,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"r to y",
@@ -121,6 +121,11 @@
 			]
 		}
 	],
-	"updt": 1570673148102,
-	"edit": 4
+	"updt": 1570690728970,
+	"edit": 5,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
