--- a/uknown_xyhc52.gif.json
+++ b/uknown_xyhc52.gif.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_xyhc52.gif",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_xyhc52.gif",
 	"sector": "HJG_9716",
 	"sec_level": 4,
 	"date_added": 1569127848897,
-	"last_scraped": 1570690068146,
+	"last_scraped": 1570702549638,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570733383635,
+	"next_scrape": 1570744325867,
 	"category": "clicker",
-	"last_update": 1570690068146,
+	"last_update": 1570702549638,
 	"output": [
 		{
 			"args": {},
-			"calls": 30502,
+			"calls": 38007,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ke wh",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 23081,
+			"calls": 35823,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ke wh",
@@ -114,6 +114,11 @@
 			]
 		}
 	],
-	"updt": 1570690053827,
-	"edit": 5
+	"updt": 1570690277963,
+	"edit": 6,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
