--- a/unknown_k75d7f.hack_me.json
+++ b/unknown_k75d7f.hack_me.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_k75d7f.hack_me",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_k75d7f.hack_me",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569213624453,
-	"last_scraped": 1570690519911,
+	"last_scraped": 1570702973961,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 14,
-	"next_scrape": 1570733664652,
+	"next_scrape": 1570747253863,
 	"category": "clicker",
-	"last_update": 1570690519911,
+	"last_update": 1570702973961,
 	"output": [
 		{
 			"args": {},
-			"calls": 24965,
+			"calls": 31954,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ou se",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 24772,
+			"calls": 30715,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ou se",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4200,
+			"calls": 4986,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ou se",
@@ -128,6 +128,6 @@
 			]
 		}
 	],
-	"updt": 1570672922026,
-	"edit": 4
+	"updt": 1570690728970,
+	"edit": 5
 }
