--- a/uknown_4wh9we.scam.json
+++ b/uknown_4wh9we.scam.json
@@ -6,7 +6,7 @@
 	"sector": "HJG_6485",
 	"sec_level": 4,
 	"date_added": 1569297916960,
-	"last_scraped": 1570703132649,
+	"last_scraped": 1570703154343,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1570749313549,
+	"next_scrape": 1570746927764,
 	"category": "clicker",
-	"last_update": 1570703102933,
+	"last_update": 1570703154343,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 37350,
+			"calls": 42173,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"r to y",
@@ -80,7 +80,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7155,
+			"calls": 7836,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"r to y",
@@ -122,10 +122,5 @@
 		}
 	],
 	"updt": 1570690728970,
-	"edit": 5,
-	"retry_args": [
-		{
-			"CLICK": true
-		}
-	]
+	"edit": 5
 }
