--- a/uknown_9dinwd.t3_fast.json
+++ b/uknown_9dinwd.t3_fast.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_9dinwd.t3_fast",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_9dinwd.t3_fast",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1570696077466,
+	"last_scraped": 1570708156745,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1570681937481,
-	"edit": 5,
+	"updt": 1570696145413,
+	"edit": 6,
 	"scrape_ct": 17,
-	"next_scrape": 1570736461040,
+	"next_scrape": 1570751662511,
 	"category": "clicker",
-	"last_update": 1570696077466,
+	"last_update": 1570708156745,
 	"output": [
 		{
 			"args": {},
-			"calls": 20149,
+			"calls": 24133,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" Rand",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 34097,
+			"calls": 47140,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" Rand",
@@ -90,7 +90,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 5192,
+			"calls": 6634,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				" Rand",
