--- a/uknown_ewk6vx.mgb.json
+++ b/uknown_ewk6vx.mgb.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ewk6vx.mgb",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ewk6vx.mgb",
 	"sector": "K_8071",
 	"sec_level": 4,
 	"date_added": 1569227339442,
-	"last_scraped": 1570698612769,
+	"last_scraped": 1570710941139,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 1,
-	"next_scrape": 1570743132598,
+	"next_scrape": 1570752737950,
 	"category": "clicker",
-	"last_update": 1570698612769,
+	"last_update": 1570710941139,
 	"output": [
 		{
 			"args": {},
-			"calls": 67674,
+			"calls": 81358,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"\\n1E29",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 59174,
+			"calls": 62654,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"\\n1E29",
@@ -160,6 +160,11 @@
 			]
 		}
 	],
-	"updt": 1570685770861,
-	"edit": 6
+	"updt": 1570698622970,
+	"edit": 7,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
