--- a/unknown_b5i9v6.giga_flare.json
+++ b/unknown_b5i9v6.giga_flare.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_b5i9v6.giga_flare",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_b5i9v6.giga_flare",
 	"sector": "NGC_4554",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562878280162
+		},
+		{
+			"type": "died",
+			"when": 1570711457692
 		}
 	],
 	"next_scrape": 1570741445445,
@@ -161,8 +165,8 @@
 			]
 		}
 	],
-	"updt": 1570688477036,
-	"edit": 27,
+	"updt": 1570701557221,
+	"edit": 28,
 	"retry_args": [
 		{
 			"do": "clean"
